# vulkan-renderer

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .uncrustify  CMakeLists.txt  README.md
cmake/: jfclib.cmake
docs/: CMakeLists.txt  README.md.in  doxy.config.in  doxygen-modern.css  generate-readme.sh  tabs.css
docs/.config/: doxy.config.in
include/vkrenderer/: Vertex.h
resources/: CMakeLists.txt
shaders/: CMakeLists.txt  depth.frag  depth.vert  triangle.vert
src/: CMakeLists.txt  Texture.cpp  Texture.h  Vertex.cpp  backup_backup_main.cpp  backup_main.cpp  cmake.h.in  main.cpp  temp.h
tests/: CMakeLists.txt  example_test.cpp
workspace/: build.sh  buildandrun.sh  docs.sh  format.sh  run.sh
